...
            onPasswordChange(it)
        },
        label = { Text(label) },
        modifier = Modifier
            .padding(12.dp)
            .fillMaxWidth()
            .testTag("PASSWORD_FIELD"),
        visualTransformation = PasswordVisualTransformation(),
        keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
        textStyle = TextStyle(color = Color(0xE6FFFFFF)),
        colors = TextFieldDefaults.outlinedTextFieldColors(
            focusedBorderColor = Color(0xFF373737),
            focusedLabelColor = Color(0xFF979C9E),
...
