...
                // Friend Name
                TextField(
                    value = friendsUsername,
                    onValueChange = { friendsUsername = it },
                    label = {
                        Text(
                            "Username",
                            modifier = Modifier.testTag("ADD_FRIEND_POPUP_FRIEND_NAME_LABEL")
                        )
                    },
                    singleLine = true,
                    modifier = Modifier.testTag("FRIEND_NAME_INPUT"),
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
...
